--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGO_URI=mongodb+srv://shlomo:chaim123@cluster0.52nu6pg.mongodb.net/moesjerky?retryWrites=true&w=majority
+
+# Square credentials
+SQUARE_ACCESS_TOKEN=EAAAl9vNQx98OuQd0i-iW2P-ITQ8ew9nd9o6Tx1QHQPUCbiipw6jHbQRNpk084b-
+SQUARE_LOCATION_ID=LEJEJJ3DENNN4
