--- a/package.json
+++ b/package.json
@@ -10,6 +10,5 @@
   "dotenv": "^16.0.3",
   "express": "^4.18.2",
   "mongoose": "^7.3.1",
-  "@square/square": "^36.1.0"
-}
+"square": "square/square-nodejs-sdk"}
 }
