--- a/package.json
+++ b/package.json
@@ -10,5 +10,6 @@
   "dotenv": "^16.0.3",
   "express": "^4.18.2",
   "mongoose": "^7.3.1",
-"square": "square/square-nodejs-sdk"}
+"@square/square-nodejs-sdk": "^36.1.0"
+}
 }
